env sample changed, swagger upgraded to 3.0
