# routes/authRoutes.js
@@ -32,7 +32,7 @@ router.post("/register",
                 minNumbers: 1,
                 minSymbols: 1
             })
-            .withMessage("Password must be at least 6 characters long"),
+            .withMessage("Password must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one number, and one special character."),
     ],
     registerUser
 );
